--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Framework replates to ReactJs, Redux and ImmutableJs and NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/karma/bin/karma start",
     "build": "./node_modules/webpack/bin/webpack.js --debug",
     "start": "npm run build && node server.js"
   },
@@ -19,19 +19,33 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.17.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
     "immutable": "^3.8.1",
+    "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "mocha": "^3.2.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sourcemap": "^0.1.0"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.3.13",
-    "webpack": "^1.13.2"
+    "d3": "^4.7.0",
+    "expect": "^1.20.2",
+    "karma": "^1.5.0",
+    "karma-cli": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.2",
+    "react": "^15.4.2",
+    "webpack": "^1.14.0"
   }
 }
