--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "mocha": "^3.2.0",
     "react": "^15.3.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
